WebCore/loader/DocumentLoader.h
@@ -148,6 +148,8 @@ namespace WebCore {
         void addPlugInStreamLoader(ResourceLoader*);
         void removePlugInStreamLoader(ResourceLoader*);
 
+        void subresourceLoaderFinishedLoadingOnePart(ResourceLoader*);
+        
     private:
         void setupForReplace();
         void commitIfReady();
@@ -160,6 +162,7 @@ namespace WebCore {
 
         RefPtr<MainResourceLoader> m_mainResourceLoader;
         ResourceLoaderSet m_subresourceLoaders;
+        ResourceLoaderSet m_multipartSubresourceLoaders;
         ResourceLoaderSet m_plugInStreamLoaders;
 
         RefPtr<SharedBuffer> m_mainResourceData;
